--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Files I don't want to see on github
 public_html/final/.env.php
 public_html/final-starter/.env.php
+
+# Mac hidden files
+.DS_Store
