--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Files I don't want to see on github
-public_html/final/.env.php
-public_html/final-starter/.env.php
+env.php
 
 # Mac hidden files
 .DS_Store
